MGS-1315 BUG Remove gap between menu icon and menu when selected

--- a/resources/scss/components/_component.main-nav.scss
+++ b/resources/scss/components/_component.main-nav.scss
@@ -34,7 +34,7 @@ $main-nav__transition-timing: ease;
       list-style-type: none;
       margin: 0;
       position: fixed;
-      top: 75px;
+      top: 63px;
       right: 0;
       z-index: 1001;
       padding: 24px 15px;
